Fix checklist striation colors in dark mode and add striation to EXH todo list

--- a/frontend/app/assets/stylesheets/application.scss
+++ b/frontend/app/assets/stylesheets/application.scss
@@ -479,10 +479,14 @@ h3 .manacost {
 }
 .checklist {
   a { color: inherit; }
-  tr:nth-child(even) {
-    background-color: #d8d8d8;
-  }
   td, th {
     padding: 1px 2px 1px 2px;
+  }
+}
+.cheklist tr:nth-child(even),
+.card_row:nth-child(2n) {
+  background-color: #d8d8d8;
+  @media (prefers-color-scheme: dark) {
+    background-color: #272727;
   }
 }
